➕ Pod RxDataSources installed.

--- a/event-manager-ios/Podfile
+++ b/event-manager-ios/Podfile
@@ -8,5 +8,6 @@ target 'event-manager-ios' do
   # Pods for event-manager-ios
   pod 'RxSwift',    '~> 3.0'
   pod 'RxCocoa',    '~> 3.0'
+  pod 'RxDataSources'
 
 end
