--- a/event-manager-ios/Podfile
+++ b/event-manager-ios/Podfile
@@ -1,13 +1,23 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
+inhibit_all_warnings!
 
 target 'event-manager-ios' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for event-manager-ios
-  pod 'RxSwift',    '~> 3.0'
-  pod 'RxCocoa',    '~> 3.0'
+  pod 'RxSwift'
+  pod 'RxCocoa'
   pod 'RxDataSources'
 
 end
+
+post_install do |installer|
+	installer.pods_project.targets.each do |target|
+		target.build_configurations.each do |config|
+			config.build_settings['SWIFT_VERSION'] = '3.0'
+		end
+	end
+end
+
