--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,7 @@
 disabled_rules:
   - line_length
   - multiple_closures_with_trailing_closure
+  - notification_center_detachment
 
 excluded:
   - Pods
