--- a/event-manager-ios/Info.plist
+++ b/event-manager-ios/Info.plist
@@ -48,5 +48,28 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+<array>
+    <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+            <string>fb1499497803481666</string>
+        </array>
+    </dict>
+</array>
+<key>FacebookAppID</key>
+<string>1499497803481666</string>
+<key>FacebookDisplayName</key>
+<string>Event Manager</string>
+
+<key>LSApplicationQueriesSchemes</key>
+<array>
+    <string>fbapi</string>
+    <string>fb-messenger-api</string>
+    <string>fbauth2</string>
+    <string>fbshareextension</string>
+</array>
 </dict>
+
+
 </plist>
