--- a/ios-client/Podfile
+++ b/ios-client/Podfile
@@ -19,6 +19,7 @@ target 'event-manager-ios' do
   pod 'SwiftyAttributes'
   pod 'MBProgressHUD', '~> 1.1.0'
   pod 'Firebase/Auth'
+  pod 'Firebase/Database'
   pod 'FBSDKCoreKit'
   pod 'FBSDKLoginKit'
   
